# interacting_particles

./: CMakeLists.txt  README.md  install_app.sh
python/: visualize_results.py
src/interacting_particles/: pybind.cpp
src/interacting_particles/include/: boundary_physics.h  ink_simulation.h  point_agglomerate.h
src/interacting_particles/source/: boundary_physics.cpp  ink_simulation.cpp  point_agglomerate.cpp
